--- a/src/app/admin/search-bangumi/search-bangumi.html
+++ b/src/app/admin/search-bangumi/search-bangumi.html
@@ -8,8 +8,8 @@
 <div layout="row" layout-align="center">
   <md-content layout="column" flex="100" flex-gt-md="70">
     <section layout="row" layout-align="center stretch">
-      <md-input-container class="md-block" flex-gt-sm>
-        <input placeholder="输入番组名称搜索" #searchBox (keyup.enter)="searchBangumi(searchBox.value)"/>
+      <md-input-container class="md-block" flex="100">
+        <input placeholder="输入番组名称搜索" class="material-input" #searchBox (keyup.enter)="searchBangumi(searchBox.value)"/>
       </md-input-container>
     </section>
   </md-content>
