add list saved bangumi component, add update bangumi api and some business code to bangumi-detail component

--- a/src/app/admin/admin.scss
+++ b/src/app/admin/admin.scss
@@ -1,4 +1,4 @@
-$md-font-url: "/node_modules/ng2-material/dist/";
+$md-font-url: "/ng2-material/dist/";
 @import "~ng2-material/source/all";
 @import "~ng2-material/dist/font";
 
