--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -4,7 +4,7 @@
       <i md-icon>arrow_back</i>
     </button>
     <h2>
-      <span>Edit Bangumi</span>
+      <span>编辑新番</span>
     </h2>
   </div>
 </md-toolbar>
