--- a/src/app/admin/list-bangumi/list-bangumi.html
+++ b/src/app/admin/list-bangumi/list-bangumi.html
@@ -1,7 +1,7 @@
 <md-toolbar>
   <div class="md-toolbar-tools">
     <h2>
-      <span>搜索新番</span>
+      <span>已保存的新番</span>
     </h2>
   </div>
 </md-toolbar>
@@ -9,7 +9,7 @@
   <md-content layout="column" flex="100" flex-gt-md="70">
     <section layout="row" layout-align="center stretch">
       <md-input-container class="md-block" flex="100">
-        <input placeholder="输入番组名称搜索" class="material-input" #searchBox (keyup.enter)="searchBangumi(searchBox.value)"/>
+        <input placeholder="按名称过滤" class="material-input" #searchBox (keyup.enter)="filterBangumi()" [name]="searchBox.value"/>
       </md-input-container>
     </section>
   </md-content>
@@ -17,15 +17,18 @@
 <div layout="row" layout-align="center">
   <md-content layout="column" flex="100" flex-gt-md="70">
     <md-list>
-      <md-list-item *ngFor="#bangumi of bangumiList" (click)="addBangumi(bangumi)" class="md-3-line bangumi-list-item md-whiteframe-1dp">
+      <md-list-item *ngFor="#bangumi of bangumiList" (click)="editBangumi(bangumi)" class="md-3-line bangumi-list-item md-whiteframe-1dp">
         <img [src]="bangumi.image" alt="image" class="bangumi-image">
         <div class="md-list-item-text" layout="column">
           <h3>{{bangumi.name_cn}}</h3>
           <h4>{{bangumi.name}}</h4>
-          <p class="exist-indicator" [hidden]="!bangumi.id">已添加</p>
+          <p>{{bangumi.summary}}</p>
+          <p>{{bangumi.air_date}}</p>
+          <p>{{bangumi.air_weekday}}</p>
+          <p>{{bangumi.rss}}</p>
+          <p>{{bangumi.eps_regex}}</p>
         </div>
       </md-list-item>
     </md-list>
   </md-content>
 </div>
-
