--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -8,24 +8,39 @@
       </div>
     </md-toolbar>
     <md-content layout-padding="">
-      <form (ngSubmit)="registerUser()">
+      <form (ngSubmit)="registerUser()" [ngFormModel]="registerForm">
         <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': user.name}">
           <label>用户名</label>
-          <input class="material-input" type="text" [(ngModel)]="user.name"/>
+          <input class="material-input" type="text" [(ngModel)]="user.name" ngControl="name" required/>
+          <div md-messages="name">
+            <div md-message="required">用户名不能为空</div>
+          </div>
         </md-input-container>
         <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': user.password}">
           <label>密码</label>
-          <input class="material-input" type="password" [(ngModel)]="user.password"/>
+          <input class="material-input" type="password" [(ngModel)]="user.password" ngControl="password" required/>
+          <div md-messages="password">
+            <div md-message="required">密码不能为空</div>
+          </div>
         </md-input-container>
         <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': user.password_repeat}">
           <label>重复密码</label>
-          <input class="material-input" type="password" [(ngModel)]="user.password_repeat"/>
+          <input class="material-input" type="password" [(ngModel)]="user.password_repeat" ngControl="password_repeat" required/>
+          <div md-messages="password_repeat">
+            <div md-message="required">重复密码不能为空</div>
+          </div>
+          <div class="md-messages md-invalid" *ngIf="registerForm.controls.password_repeat.touched && !registerForm.controls.password_repeat.hasError('required')">
+            <div class="md-message" *ngIf="registerForm.hasError('mismatchedPasswords')">密码不匹配</div>
+          </div>
         </md-input-container>
         <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': user.invite_code}">
           <label>邀请码</label>
-          <input class="material-input" type="password" [(ngModel)]="user.invite_code"/>
+          <input class="material-input" type="password" [(ngModel)]="user.invite_code" ngControl="invite_code" required/>
+          <div md-messages="invite_code">
+            <div md-message="required">邀请码不能为空</div>
+          </div>
         </md-input-container>
-        <button md-button type="submit">保存</button>
+        <button md-button type="submit" [disabled]="!registerForm.valid">保存</button>
       </form>
     </md-content>
   </md-content>
