--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -40,7 +40,7 @@
             <div md-message="required">邀请码不能为空</div>
           </div>
         </md-input-container>
-        <button md-button type="submit" [disabled]="!registerForm.valid">保存</button>
+        <button md-raised-button class="md-raised md-primary" type="submit" [disabled]="!registerForm.valid">保存</button>
       </form>
     </md-content>
   </md-content>
