--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,3 +20,39 @@ md-input-container {
     padding-top: 5px;
   }
 }
+
+@media (max-width: 599px) {
+  .center-box {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 100%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+@media (min-width: 600px) {
+  .center-box {
+    width: 480px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
+  }
+
+  .center-box-frame {
+    height: 600px;
+  }
+
+  .center-box-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.error-message {
+  color: #f44336;
+}
