--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,41 +1,49 @@
-<div layout="row" layout-align="center">
-  <md-content layout="column" flex="100">
-    <md-toolbar>
-      <div class="md-toolbar-tools">
-        <h1>
-          <span>登录</span>
-        </h1>
-      </div>
-    </md-toolbar>
-    <md-content layout-padding="">
-      <form (ngSubmit)="login()" [ngFormModel]="loginForm">
-        <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': user.name}">
-          <label>用户名</label>
-          <input class="material-input" type="text" [(ngModel)]="user.name" ngControl="name" required/>
-          <div md-messages="name">
-            <div md-message="required">用户名不能为空</div>
-          </div>
-        </md-input-container>
-        <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': user.password}">
-          <label>密码</label>
-          <input class="material-input" type="password" [(ngModel)]="user.password" ngControl="password" required/>
-          <div md-messages="password">
-            <div md-message="required">密码不能为空</div>
-          </div>
-        </md-input-container>
-        <div flex="100">
-          <md-checkbox [(checked)]="user.remember">保存登录状态</md-checkbox>
+<div class="center-box-background">
+  <div layout="row" layout-align="center" class="center-box-frame">
+    <md-content layout="column" class="center-box">
+      <md-toolbar>
+        <div class="md-toolbar-tools">
+          <h1>
+            <span>登录</span>
+          </h1>
         </div>
-        <button md-raised-button class="md-raised md-primary" type="submit" [disabled]="!loginForm.valid">登录</button>
-      </form>
-      <div flex="100">
-        <button md-button class="md-disabled" [routerLink]="['Forget']">忘记密码</button>
-      </div>
-      <div flex="100">
-        <a md-button class="md-primary" [routerLink]="['Register']">创建新用户</a>
-      </div>
+      </md-toolbar>
+      <md-content layout-padding="">
+        <form (ngSubmit)="login()" [ngFormModel]="loginForm">
+          <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': loginForm.controls.name.value}">
+            <label>用户名</label>
+            <input class="material-input" type="text" ngControl="name" required/>
+            <div md-messages="name">
+              <div md-message="required">用户名不能为空</div>
+            </div>
+          </md-input-container>
+          <md-input-container class="md-block" flex="100" [ngClass]="{'md-input-has-value': loginForm.controls.password.value}">
+            <label>密码</label>
+            <input class="material-input" type="password" ngControl="password" required/>
+            <div md-messages="password">
+              <div md-message="required">密码不能为空</div>
+            </div>
+          </md-input-container>
+          <div flex="100">
+            <md-checkbox [checked]="loginForm.controls.remember.value" (click)="toggleRemember()">保存登录状态</md-checkbox>
+          </div>
+          <div layout="row" layout-align="center">
+            <button md-raised-button class="md-raised md-primary" type="submit" [disabled]="!loginForm.valid">登录</button>
+          </div>
+
+        </form>
+        <div layout="row" layout-align="center">
+          <div class="forget-link">
+            <button md-button class="md-disabled" [routerLink]="['Forget']">忘记密码</button>
+          </div>
+        </div>
+        <div layout="row" layout-align="center">
+          <a md-button class="md-primary" [routerLink]="['Register']">创建新用户</a>
+        </div>
+        <div layout="row" layout-align="center" *ngIf="errorMessage">
+          <p class="error-message">{{errorMessage}}</p>
+        </div>
+      </md-content>
     </md-content>
-  </md-content>
+  </div>
 </div>
-
-
