update register page with semantic ui rewrite router protection and authentication, now using new security-outlet directive extending from router-outlet which will authenticate user credential on active

--- a/src/app/admin/admin.html
+++ b/src/app/admin/admin.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="ui left sidebar visible">
+
+</div>
+<div class="pusher">
+  <router-outlet></router-outlet>
+</div>
