--- a/src/app/_center-box.less
+++ b/src/app/_center-box.less
@@ -1,4 +1,13 @@
 
+.center-box {
+  .center-box-header {
+    text-align: center;
+  }
+  .center-box-body {
+    padding: 15px;
+  }
+}
+
 @media (max-width: 723px) {
   .center-box {
     flex-grow: 1;
@@ -6,19 +15,15 @@
     flex-basis: 100%;
     max-width: 100%;
     max-height: 100%;
+    .center-box-header {
+      margin-top: 40px;
+    }
   }
 }
 
 @media (min-width: 723px) {
   .center-box {
     width: 400px;
-
-    .center-box-header {
-      text-align: center;
-    }
-    .center-box-body {
-      padding: 10px;
-    }
   }
 
   .center-box-frame {
