--- a/src/app/admin/search-bangumi/search-bangumi.html
+++ b/src/app/admin/search-bangumi/search-bangumi.html
@@ -1,31 +1,21 @@
-<md-toolbar>
-  <div class="md-toolbar-tools">
-    <h2>
-      <span>搜索新番</span>
-    </h2>
+<nav class="nav-admin">
+  <h1 class="ui header">添加新的新番</h1>
+</nav>
+<div class="bangumi-container">
+  <div class="ui loading search">
+    <div class="ui fluid icon input">
+      <input class="prompt" type="text" placeholder="输入番组名称搜索" #searchBox (keyup.enter)="searchBangumi(searchBox.value)"/>
+      <i class="search icon"></i>
+    </div>
   </div>
-</md-toolbar>
-<div layout="row" layout-align="center">
-  <md-content layout="column" flex="100" flex-gt-md="70">
-    <section layout="row" layout-align="center stretch">
-      <md-input-container class="md-block" flex="100">
-        <input placeholder="输入番组名称搜索" class="material-input" #searchBox (keyup.enter)="searchBangumi(searchBox.value)"/>
-      </md-input-container>
-    </section>
-  </md-content>
+  <div class="bangumi-list">
+    <div *ngFor="#bangumi of bangumiList" (click)="addBangumi(bangumi)"  class="ui segment bangumi-list-item">
+      <img [src]="bangumi.image" alt="image" class="bangumi-image">
+      <div class="md-list-item-text" layout="column">
+        <h3>{{bangumi.name_cn}}</h3>
+        <h4>{{bangumi.name}}</h4>
+        <p *ngIf="bangumi.id"><span class="ui teal tag label">已添加</span></p>
+      </div>
+    </div>
+  </div>
 </div>
-<div layout="row" layout-align="center">
-  <md-content layout="column" flex="100" flex-gt-md="70">
-    <md-list>
-      <md-list-item *ngFor="#bangumi of bangumiList" (click)="addBangumi(bangumi)" class="md-3-line bangumi-list-item md-whiteframe-1dp">
-        <img [src]="bangumi.image" alt="image" class="bangumi-image">
-        <div class="md-list-item-text" layout="column">
-          <h3>{{bangumi.name_cn}}</h3>
-          <h4>{{bangumi.name}}</h4>
-          <p class="exist-indicator" [hidden]="!bangumi.id">已添加</p>
-        </div>
-      </md-list-item>
-    </md-list>
-  </md-content>
-</div>
-
