--- a/src/app/admin/list-bangumi/list-bangumi.html
+++ b/src/app/admin/list-bangumi/list-bangumi.html
@@ -22,11 +22,11 @@
           <span class="entry-value">{{bangumi.summary}}</span>
         </p>
         <p class="entry">
-          <span class="entry-key">放松开始</span>
+          <span class="entry-key">放送开始</span>
           <span class="entry-value">{{bangumi.air_date}}</span>
         </p>
         <p class="entry">
-          <span class="entry-key">放松星期</span>
+          <span class="entry-key">放送星期</span>
           <span class="entry-value">{{bangumi.air_weekday}}</span>
         </p>
         <p class="entry">
