adjust style and layout for home

--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -1,4 +1,6 @@
 <div class="ui container">
+  <h4>最近更新</h4>
+  <div class="ui divider"></div>
   <div class="ui five doubling cards">
     <div class="card" *ngFor="#episode of recentEpisodes">
       <div class="image">
